--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.4.0",
+    "prettier": "^2.5.1",
     "typescript": "4.6.2"
   }
 }
